# no-fish

./: .gitignore  .gitlab-ci.yml  Dockerfile  LICENSE  README.md  docker-compose.yaml  example.env  pyproject.toml  requirements.txt
.gitlab/: auto-deploy-values.yaml
charts/: values.yml
charts/fish/: Chart.yaml  values.yaml
charts/fish/templates/: NOTES.txt  _helpers.tpl  beat-deployment.yaml  deployment.yaml  ingress.yaml  service.yaml  worker-deployment.yaml
fish/account/: admin.py  apps.py  models.py  views.py
fish/account/migrations/: 0001_initial.py  0002_auto_20210810_0738.py  0003_user_is_staff.py  0004_auto_20210831_1135.py
fish/account/utils/: response.py
fish/app/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
fish/app/migrations/: 0001_initial.py  0002_auto_20210902_1056.py  0003_auto_20210906_0807.py  0004_alter_photo_created.py  0005_alter_photo_created.py  0006_auto_20210906_0849.py  0007_auto_20210907_1217.py
fish/config/: settings.py  urls.py
fish/locale/zh_hans/LC_MESSAGES/: django.mo  django.po
fish/static/admin/simpleui-x/particles/: particles.js
fish/static/css/: font-awesome.min.css  ionicons.min.css  style.css
fish/templates/: base.html  footer.html  header.html  index.html  photo-detail.html  photo.html  plugins.html  slider.html
scripts/: celery_beat.sh  celery_worker.sh  start.sh
