[tool.poetry]
name = "nofish"
version = "0.1.0"
description = ""
authors = ["malin <malinsuse@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.5"
django-environ = "^0.5.0"
mysqlclient = "^2.0.3"
PyMySQL = "^1.0.2"
djangorestframework = "^3.12.4"
django-phonenumber-field = "^5.2.0"
phonenumbers = "^8.12.28"
pendulum = "^2.1.2"
Pillow = "^8.3.1"
django-simpleui = "^2021.8.17"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
