[tool.poetry]
name = "nofish"
version = "0.1.0"
description = ""
authors = ["malin <malinsuse@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.5"
django-environ = "^0.6.0"
mysqlclient = "^2.0.3"
PyMySQL = "^1.0.2"
djangorestframework = "^3.12.4"
django-phonenumber-field = "^5.2.0"
phonenumbers = "^8.12.28"
pendulum = "^2.1.2"
Pillow = "^8.3.1"
django-simpleui = "^2021.8.17"
pictures = "^0.7"
null = "^0.6.1"
self = "^2020.12.3"
django-nested-inline = "^0.4.4"
celery = "^5.1.2"
gunicorn = "^20.1.0"
django-storage-qcloud = "^0.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
